# Qt6-VSCode-Starter

./: CMakeLists.txt  License.txt  README.md
src/: main.cpp
src/Application/: QTApplication.cpp  QTApplication.h
test/: test.cpp
ui/: QTApplication.ui
